# event_circle_detection

./: CMakeLists.txt  package.xml
cfg/: trackerCfg.cfg
scripts/: circle_detector.py  test_tf.ipynb
