<?xml version="1.0"?>
<package format="2">
  <name>event_circle_tracker</name>
  <version>0.0.0</version>
  <description>An event based circle tracker</description>
  <maintainer email="abdulla.ayyad96@gmail.com">Abdulla Ayyad</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv2</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>camera_info_manager</depend>
  <depend>rospy</depend>
  <depend>dvs_renderer</depend>
  <depend>davis_ros_driver</depend>
  <depend>nodelet</depend>

  <export>

  </export>

</package>
